Your commit message

--- a/public/games.html
+++ b/public/games.html
@@ -91,6 +91,7 @@ body {
 </li><button class="btn" data-path="Games/Konnekt/index.html"><img class="imgg" src="" alt="">Konnekt<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Survival Race/index.html"><img class="imgg" src="" alt="">Survival Race<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Super Fowlest.html"><img class="imgg" src="" alt="">Super Fowlest<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Boxing Physics 2/index.html"><img class="imgg" src="" alt="">Boxing Physics 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Territorial.io.html"><img class="imgg" src="" alt="">Territorial.io<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/2048/index.html"><img class="imgg" src="" alt="">2048<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Basket Random/index.html"><img class="imgg" src="" alt="">Basket Random<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -135,6 +136,7 @@ body {
 </li><button class="btn" data-path="Games/Funny Shooter 2/index.html"><img class="imgg" src="" alt="">Funny Shooter 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Rooftop Snipers 2/index.html"><img class="imgg" src="" alt="">Rooftop Snipers 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Alien Hominid/index.html"><img class="imgg" src="" alt="">Alien Hominid<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Skibidi Toilet/index.html"><img class="imgg" src="" alt="">Skibidi Toilet<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Amazing Strange Rope Police/index.html"><img class="imgg" src="" alt="">Amazing Strange Rope Police<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Bit Planes/index.html"><img class="imgg" src="" alt="">Bit Planes<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Chroma Incident/index.html"><img class="imgg" src="" alt="">Chroma Incident<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -171,6 +173,7 @@ body {
 </br>
 </br>
 <div class="btn-container">
+</li><button class="btn" data-path="Games/Boxing Physics 2/index.html"><img class="imgg" src="" alt="">Boxing Physics 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/1v1.LOL/index.html"><img class="imgg"src="Imgs/1v1.LOL.png"alt="1v1.LOL">1v1.LOL<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Dungeon Raid.html"><img class="imgg" src="" alt="">Dungeon Raid<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Konnekt/index.html"><img class="imgg" src="" alt="">Konnekt<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -269,8 +272,10 @@ body {
 <div class="btn-container">
 </li><button class="btn" data-path="Games/1v1.LOL/index.html"><img class="imgg"src="Imgs/1v1.LOL.png"alt="1v1.LOL">1v1.LOL<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Basket Random/index.html"><img class="imgg" src="" alt="">Basket Random<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Boxing Physics 2/index.html"><img class="imgg" src="" alt="">Boxing Physics 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Rooftop Snipers 2/index.html"><img class="imgg" src="" alt="">Rooftop Snipers 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Drunken Duel/index.html"><img class="imgg" src="" alt="">Drunken Duel<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Basketball Stars/index.html"><img class="imgg" src="" alt="">Basketball Stars<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Soccer Random/index.html"><img class="imgg" src="" alt="">Soccer Random<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/2D Rocket League/index.html"><img class="imgg" src="" alt="">2D Rocket League<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/My Rusty Submarine/index.html"><img class="imgg" src="" alt="">My Rusty Submarine<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -494,6 +499,7 @@ body {
 </li><button class="btn" data-path="Games/Bouncy Ninja 2.html"><img class="imgg" src="" alt="">Bouncy Ninja 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Captain Rocket.html"><img class="imgg" src="" alt="">Captain Rocket<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Circle O.html"><img class="imgg" src="" alt="">Circle O<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Crossy Road/index.html"><img class="imgg" src="" alt="">Crossy Road<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Circle O 2/index.html"><img class="imgg" src="" alt="">Circle O 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Climber Man.html"><img class="imgg" src="" alt="">Climber Man<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Coil Master/index.html"><img class="imgg" src="" alt="">Coil Master<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -608,7 +614,9 @@ body {
 </li><button class="btn" data-path="Games/Drift Mania/index.html"><img class="imgg" src="" alt="">Drift Mania<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Neon Foosball.html"><img class="imgg" src="" alt="">Neon Foosball<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Nitro Clash.html"><img class="imgg" src="" alt="">Nitro Clash<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Boxing Physics 2/index.html"><img class="imgg" src="" alt="">Boxing Physics 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Racer/index.html"><img class="imgg" src="" alt="">Racer<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Basketball Stars/index.html"><img class="imgg" src="" alt="">Basketball Stars<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Retro Bowl.html"><img class="imgg" src="" alt="">Retro Bowl<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Mini Putt/index.html"><img class="imgg" src="" alt="">Mini Putt<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Soccer Random/index.html"><img class="imgg" src="" alt="">Soccer Random<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
