Your commit message

--- a/public/games.html
+++ b/public/games.html
@@ -67,6 +67,7 @@ body {
 </li><button class="btn" data-path="Games/Time Shooter 2.html"><img class="imgg" src="" alt="">Time Shooter 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Time Shooter 3.html"><img class="imgg" src="" alt="">Time Shooter 3<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Rocket Soccer Derby/index.html"><img class="imgg" src="" alt="">Rocket Soccer Derby<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Crazy Cattle 3D/index.html"><img class="imgg" src="" alt="">Crazy Caddle 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Paper.io 2.html"><img class="imgg" src="" alt="">Paper.io 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Amazing Strange Rope Police/index.html"><img class="imgg" src="" alt="">Amazing Strange Rope Police<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/There Is No Game/index.html"><img class="imgg" src="" alt="">There Is No Game<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -178,6 +179,7 @@ body {
 </li><button class="btn" data-path="Games/Dungeon Raid.html"><img class="imgg" src="" alt="">Dungeon Raid<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Konnekt/index.html"><img class="imgg" src="" alt="">Konnekt<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/N-Gon Master/index.html"><img class="imgg" src="" alt="">N-Gon Master<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Crazy Cattle 3D/index.html"><img class="imgg" src="" alt="">Crazy Caddle 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Paper.io 2.html"><img class="imgg" src="" alt="">Paper.io 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Paper.io 3D.html"><img class="imgg" src="" alt="">Paper.io 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Time Shooter 1/index.html"><img class="imgg" src="" alt="">Time Shooter 1<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -497,6 +499,7 @@ body {
 </li><button class="btn" data-path="Games/Asteroids/index.html"><img class="imgg" src="" alt="">Asteroids<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>   
 </li><button class="btn" data-path="Games/Bouncy Ninja 1.html"><img class="imgg" src="" alt="">Bouncy Ninja 1<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Bouncy Ninja 2.html"><img class="imgg" src="" alt="">Bouncy Ninja 2<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Crazy Cattle 3D/index.html"><img class="imgg" src="" alt="">Crazy Caddle 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Captain Rocket.html"><img class="imgg" src="" alt="">Captain Rocket<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Circle O.html"><img class="imgg" src="" alt="">Circle O<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Crossy Road/index.html"><img class="imgg" src="" alt="">Crossy Road<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
@@ -716,6 +719,7 @@ body {
 </li><button class="btn" data-path="Games/Core Ball/index.html"><img class="imgg" src="" alt="">Core Ball<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Craftmine/index.html"><img class="imgg" src="" alt="">Craftmine<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Crossy Road/index.html"><img class="imgg" src="" alt="">Crossy Road<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
+</li><button class="btn" data-path="Games/Crazy Cattle 3D/index.html"><img class="imgg" src="" alt="">Crazy Caddle 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Cube Field/index.html"><img class="imgg" src="" alt="">Cube Field<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Dante.html"><img class="imgg" src="" alt="">Dante<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
 </li><button class="btn" data-path="Games/Death Run 3D/index.html"><img class="imgg" src="" alt="">Death Run 3D<i id="heartIcon" class="fa fa-heart heart" onclick="toggleHeart(this)"></i></button></li>
