--- a/public/index.html
+++ b/public/index.html
@@ -881,56 +881,13 @@ window.addEventListener('DOMContentLoaded', function() {
         currentHeight += buttonHeight;
 
         if (currentHeight > containerHeight) {
-            button.style.alignSelf = 'flex-end'; // Move button to the right
-            currentHeight = buttonHeight; // Reset the current height for the next column
+            button.style.alignSelf = 'flex-end';
+            currentHeight = buttonHeight;
         }
     });
 });
 
 </script>
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battery Icon</title>
-    <style>
-        #batteryContainer {
-            width: 50px;
-            height: 100px;
-            border: 3px solid black;
-            position: relative;
-            display: flex;
-            align-items: flex-end;
-            overflow: hidden;
-        }
-        #batteryLevel {
-            width: 100%;
-            height: 100%;
-            background-color: #4caf50;
-            transition: height 0.5s, background-color 0.5s;
-        }
-        .charging {
-            animation: chargingAnimation 4s infinite;
-        }
-        @keyframes chargingAnimation {
-    0% { height: 0%;}
-    25% { height: 25%;}
-    50% { height: 50%;}
-    75% { height: 75%;}
-    100% { height: 100%;}
-}
-
-    </style>
-</head>
-<body>
-
-    <div id="batteryContainer">
-        <div id="batteryLevel"></div>
-    </div>
-
     <script>
         function updateBatteryIcon(percentage, isCharging) {
             const batteryLevel = document.getElementById('batteryLevel');
