--- a/public/Games/Gun Mayhem 2/index.html
+++ b/public/Games/Gun Mayhem 2/index.html
@@ -21,7 +21,7 @@
         player.style.width = "100%";
         player.style.height = "100%";
         container.appendChild(player);
-        player.load("gunmayhem2.swf");
+        player.load("Gun Mayhem 2.swf");
       });
     </script>
   </body>
