--- a/public/Games/2D Rocket League/index.html
+++ b/public/Games/2D Rocket League/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.2.1/math.min.js"></script>
+  <style>
+    body {
+      zoom: 1.5;
+    }
+  </style>
 </head>
 <body>
 <audio src="assets/goal_impact.ogg" class="goal-impact"></audio>
