--- a/public/Games/Asteroids/index.html
+++ b/public/Games/Asteroids/index.html
@@ -1,31 +1,94 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jquery-1.4.1.min.js"></script>
     <script src="vector_battle_regular.typeface.js"></script>
     <script src="ipad.js"></script>
     <script src="game.js"></script>
     <style>
-      #canvas { border:1px solid black; top:0px; left:0px; }
-      .button { position:absolute; border:1px solid black; }
-      #left-controls { position:absolute; left:1px; bottom:0px; display:none; }
-      #right-controls { position:absolute; right:1px; bottom:0px; display:none; }
-      #up { width:200px; height:100px; bottom:100px;}
-      #left { width:100px; height:100px; bottom:0px;}
-      #right { width:100px; height:100px; bottom:0px; left:100px; }
-      #space { width:200px; height:200px; bottom:0px; right:0px; }
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+
+      #canvas {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      .button {
+        position: absolute;
+        border: 1px solid black;
+      }
+
+      #left-controls {
+        position: absolute;
+        left: 1px;
+        bottom: 0;
+        display: none;
+      }
+
+      #right-controls {
+        position: absolute;
+        right: 1px;
+        bottom: 0;
+        display: none;
+      }
+
+      #up {
+        width: 200px;
+        height: 100px;
+        bottom: 100px;
+      }
+
+      #left {
+        width: 100px;
+        height: 100px;
+        bottom: 0;
+      }
+
+      #right {
+        width: 100px;
+        height: 100px;
+        bottom: 0;
+        left: 100px;
+      }
+
+      #space {
+        width: 200px;
+        height: 200px;
+        bottom: 0;
+        right: 0;
+      }
     </style>
   </head>
   <body>
     <div id="game-container">
-      <canvas id="canvas" width="780" height="540"></canvas>
+      <canvas id="canvas"></canvas>
       <div id="left-controls">
-        <div id="up" class='button'>THRUST</div>
-        <div id="left" class='button'>LEFT</div>
-        <div id="right" class='button'>RIGHT</div>
+        <div id="up" class="button">THRUST</div>
+        <div id="left" class="button">LEFT</div>
+        <div id="right" class="button">RIGHT</div>
       </div>
       <div id="right-controls">
-        <div id="space" class='button'>FIRE</div>
+        <div id="space" class="button">FIRE</div>
       </div>
     </div>
+
+    <script>
+      // Optional: set internal resolution to match screen
+      const canvas = document.getElementById('canvas');
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    </script>
   </body>
 </html>
