--- a/public/Games/Bitlife/index.html
+++ b/public/Games/Bitlife/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>BitLife - Life Simulator</title>
+    <title>BitLife</title>
     <link rel="stylesheet" href="style.css" />
 	<script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <script type="application/javascript" src="/js/main.js"></script>
     <script>
       var unityInstance = UnityLoader.instantiate("gameContainer", "Build/BitLife.json", {onProgress: UnityProgress});
     </script>
+     <link href="/img/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   </head>
   <body>
   <div class="webgl-content">
