Your commit message

--- a/public/Games/Pokemon Sapphire/index.html
+++ b/public/Games/Pokemon Sapphire/index.html
@@ -16,7 +16,7 @@
         <script>
             EJS_player = "#game";
             EJS_pathtodata = "/../Apps/Emulators/Emulator JS/data/";
-            EJS_gameUrl = "1.gba";
+            EJS_gameUrl = "sapphire.gba";
             EJS_core = 'gba';
         </script>
         <script src="/../Apps/Emulators/Emulator JS/data/loader.js"></script>
